[package]
name = "argon2_wasm"
version = "1.0.0"
authors = ["hazae41 <4405263+hazae41@users.noreply.github.com>"]
edition = "2021"

description = "WebAssembly port of Argon2"
repository = "https://github.com/hazae41/argon2.wasm"
license = "Unlicense"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true
debug = false
opt-level = 3

[dependencies]
wasm-bindgen = { version = "0.2.100", default-features = false }
argon2 = { version = "0.5.3", default-features = false, features = ["alloc"] }
memory_wasm = { path = "../../node_modules/@hazae41/memory-wasm/out/wasm"}
